@@ -24,8 +24,6 @@ NON-TECH
    *. Cached channel messages
    *. Fighter - Weapons Training (or Karate Training for Monks) -- non-kill way to gain xp, makes mobs slightly harder, 1 level up max.
    *. Make it easier to store containers of items in bank.  Like a deposit box or something.
-   *. Necromancer needs a "Call The Dead" spell to bring their former undead group members back, for when they are arrested.
-   *. Wimpy as a permanent "percentage" of hit points.
    *. A fireball type chant for Delvers or something, like Magma Cannon or Core Spike.
    *. Transcribe -as a spell, allowing a mage to transcribe a spell from one scroll to another scroll.
    *. Classes with insufficient unique skills: Charlatan (7), Alterer (9), Illusionist (10),  Ranger (11), Alterer (11), Evoker (11), Assassin (12), Paladin (12), 
