@@ -372,6 +372,15 @@ Example    : \n\r\
 Description: \n\r\
 Duh!
 
+LOYALTY=\
+Ability    : Loyalty\n\r\
+Parameters : NAME=[PLAYER] TELEPORT=[TRUE/FALSE]\n\r\
+Example    : NAME=Bob TELEPORT=false\n\r\
+Description: \n\r\
+This mob property makes a mob keep an eye out for a particular player and Follow them when \
+they encounter them.  If TELEPORT=true, they will also attempt to teleport to the player \
+before following them.
+
 MOOD=\
 Ability    : Mood\n\r\
 Parameters : [name of the mood]\n\r\
