@@ -630,6 +630,15 @@ This chant causes the target to develop a horrid foot fungus.  It \
 will slowly eat away at the targets feet until the feet rot off. It \
 deteriorates movement as it does so.
 
+CHANT_GIVELIFE=CHANT_GIVE_LIFE
+CHANT_GIVE_LIFE=<ABILITY>\
+Usage    : CHANT "GIVE LIFE" [TARGET NAME] [AMOUNT]\n\r\
+Example  : chant "give life" tiger 100\n\r\
+This chant allows the druid to give some of his or her life experience \
+to the given animal follower, so long as the follower is a group member. \
+If the animal has been named, and is a follower but not charmed, there is a \
+chance the animal will become loyal to the player.
+
 CHANT_GOODBERRY=<ABILITY>\
 Usage    : CHANT GOODBERRY [NAME OF BERRIES CARRIED]\n\r\
 Example  : chant "goodberry" berries\n\r\
