@@ -708,7 +708,8 @@ PRAYER_FEED_THE_DEAD=<ABILITY>\
 Usage    : PRAY "FEED THE DEAD" [TARGET NAME] [AMOUNT OF EXP]\n\r\
 Example  : pray "feed the dead" bob 100\n\r\
 This prayer transfers the given amount of experience from the caster to the \
-target undead creature.
+target undead creature.  This also creates a chance that the undead follower \
+will become Loyal to the player who casts it.
 
 EARTH_TO_MUD=PRAYER_EARTHMUD
 PRAYER_EARTHMUD=<ABILITY>\
